// Vitest Snapshot v1, https://reference.invalid

exports[`interpolateFrames (snapshots) > staticFrame preserves all geometry at full opacity 1`] = `
{
  "annotations": [
    {
      "geometry": {
        "from": {
          "x": 50,
          "y": 80,
        },
        "to": {
          "x": 35,
          "y": 60,
        },
      },
      "id": "a1",
      "opacity": 1,
      "style": {
        "color": "#fbbf24",
        "width": 2,
      },
      "type": "arrow-solid",
    },
  ],
  "notes": "start",
  "objects": [
    {
      "color": "#0ea5e9",
      "id": "p1",
      "label": "1",
      "opacity": 1,
      "rotation": 0,
      "size": 1,
      "type": "player",
      "x": 50,
      "y": 80,
    },
    {
      "color": "#0ea5e9",
      "id": "p2",
      "label": "2",
      "opacity": 1,
      "rotation": 0,
      "size": 1,
      "type": "player",
      "x": 35,
      "y": 60,
    },
  ],
}
`;

exports[`interpolateFrames (snapshots) > t=0 returns frame A geometry (objects opaque, A annotations opaque, B at 0) 1`] = `
{
  "annotations": [
    {
      "geometry": {
        "from": {
          "x": 50,
          "y": 80,
        },
        "to": {
          "x": 35,
          "y": 60,
        },
      },
      "id": "a1",
      "opacity": 1,
      "style": {
        "color": "#fbbf24",
        "width": 2,
      },
      "type": "arrow-solid",
    },
    {
      "geometry": {
        "from": {
          "x": 50,
          "y": 30,
        },
        "to": {
          "x": 50,
          "y": 10,
        },
      },
      "id": "a2",
      "opacity": 0,
      "style": {
        "color": "#a78bfa",
        "width": 2,
      },
      "type": "arrow-dashed",
    },
  ],
  "notes": "start",
  "objects": [
    {
      "color": "#0ea5e9",
      "id": "p1",
      "label": "1",
      "opacity": 1,
      "rotation": 0,
      "size": 1,
      "type": "player",
      "x": 50,
      "y": 80,
    },
    {
      "color": "#0ea5e9",
      "id": "p2",
      "label": "2",
      "opacity": 1,
      "rotation": 0,
      "size": 1,
      "type": "player",
      "x": 35,
      "y": 60,
    },
    {
      "color": "#0ea5e9",
      "id": "p3",
      "label": "3",
      "opacity": 0,
      "rotation": 0,
      "size": 1,
      "type": "player",
      "x": 70,
      "y": 40,
    },
  ],
}
`;

exports[`interpolateFrames (snapshots) > t=0.5 tweens shared objects, fades incoming p3, cross-fades arrows 1`] = `
{
  "annotations": [
    {
      "geometry": {
        "from": {
          "x": 50,
          "y": 80,
        },
        "to": {
          "x": 35,
          "y": 60,
        },
      },
      "id": "a1",
      "opacity": 0.5,
      "style": {
        "color": "#fbbf24",
        "width": 2,
      },
      "type": "arrow-solid",
    },
    {
      "geometry": {
        "from": {
          "x": 50,
          "y": 30,
        },
        "to": {
          "x": 50,
          "y": 10,
        },
      },
      "id": "a2",
      "opacity": 0.5,
      "style": {
        "color": "#a78bfa",
        "width": 2,
      },
      "type": "arrow-dashed",
    },
  ],
  "notes": "end",
  "objects": [
    {
      "color": "#0ea5e9",
      "id": "p1",
      "label": "1",
      "opacity": 1,
      "rotation": 0,
      "size": 1,
      "type": "player",
      "x": 42.5,
      "y": 70,
    },
    {
      "color": "#0ea5e9",
      "id": "p2",
      "label": "2",
      "opacity": 1,
      "rotation": 0,
      "size": 1,
      "type": "player",
      "x": 42.5,
      "y": 45,
    },
    {
      "color": "#0ea5e9",
      "id": "p3",
      "label": "3",
      "opacity": 0.5,
      "rotation": 0,
      "size": 1,
      "type": "player",
      "x": 70,
      "y": 40,
    },
  ],
}
`;

exports[`interpolateFrames (snapshots) > t=1 returns frame B geometry (objects opaque, A annotations at 0, B at 1) 1`] = `
{
  "annotations": [
    {
      "geometry": {
        "from": {
          "x": 50,
          "y": 80,
        },
        "to": {
          "x": 35,
          "y": 60,
        },
      },
      "id": "a1",
      "opacity": 0,
      "style": {
        "color": "#fbbf24",
        "width": 2,
      },
      "type": "arrow-solid",
    },
    {
      "geometry": {
        "from": {
          "x": 50,
          "y": 30,
        },
        "to": {
          "x": 50,
          "y": 10,
        },
      },
      "id": "a2",
      "opacity": 1,
      "style": {
        "color": "#a78bfa",
        "width": 2,
      },
      "type": "arrow-dashed",
    },
  ],
  "notes": "end",
  "objects": [
    {
      "color": "#0ea5e9",
      "id": "p1",
      "label": "1",
      "opacity": 1,
      "rotation": 0,
      "size": 1,
      "type": "player",
      "x": 35,
      "y": 60,
    },
    {
      "color": "#0ea5e9",
      "id": "p2",
      "label": "2",
      "opacity": 1,
      "rotation": 0,
      "size": 1,
      "type": "player",
      "x": 50,
      "y": 30,
    },
    {
      "color": "#0ea5e9",
      "id": "p3",
      "label": "3",
      "opacity": 1,
      "rotation": 0,
      "size": 1,
      "type": "player",
      "x": 70,
      "y": 40,
    },
  ],
}
`;
